--- a/src/main/resources/expo/designer/OrderFormDesign.html
+++ b/src/main/resources/expo/designer/OrderFormDesign.html
@@ -6,7 +6,7 @@
   <meta name="vaadin-version" content="8.0.0">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
+  <vaadin-vertical-layout margin-left="false" margin-right="false">
    <vaadin-combo-box caption="Shirt Size" data-item-type="java.lang.String" _id="shirtSize">
     <option item="Option1">Option 1</option>
     <option item="Option2">Option 2</option>
